--- a/home.html
+++ b/home.html
@@ -115,7 +115,7 @@
 				<div class="uniqueness__container">
 					<h2 class="uniqueness__title" data-watch data-watch-once data-watch-threshold="0.5">В чому наша унікальність?</h2>
 					<div class="uniqueness__body">
-						<div class="uniqueness__cake" data-watch data-watch-once data-watch-threshold="0.3">
+						<div class="uniqueness__cake" data-watch data-watch-threshold="0.3">
 							<picture><source srcset="img/uniqueness/cake_1.webp" type="image/webp"><img src="img/uniqueness/cake_1.png" class="uniqueness__cake-item uniqueness__cake-item_1" alt="cake"></picture>
 							<picture><source srcset="img/uniqueness/cake_2.webp" type="image/webp"><img src="img/uniqueness/cake_2.png" class="uniqueness__cake-item uniqueness__cake-item_2" alt="cake"></picture>
 							<picture><source srcset="img/uniqueness/cake_3.webp" type="image/webp"><img src="img/uniqueness/cake_3.png" class="uniqueness__cake-item uniqueness__cake-item_3" alt="cake"></picture>
